--- a/app/src/main/res/layout/activity_parkin_extended.xml
+++ b/app/src/main/res/layout/activity_parkin_extended.xml
@@ -161,25 +161,36 @@
                 app:cardBackgroundColor="@color/button_color"
                 app:cardCornerRadius="15dp">
 
-                <TextView
-                    android:id="@+id/textViewNote"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="right|center_vertical"
-                    android:layout_marginEnd="16dp"
-                    android:text="text"
-                    android:textColor="@color/text_color" />
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
 
-                <TextView
-                    android:id="@+id/textView16"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="top|left"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:layout_marginBottom="16dp"
-                    android:text="@string/note"
-                    android:textColor="@color/text_color" />
+                    <TextView
+                        android:id="@+id/textView16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="top|left"
+                        android:layout_marginStart="16dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:text="@string/note"
+                        android:textColor="@color/text_color" />
+
+                    <TextView
+                        android:id="@+id/textViewNote"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="right|center_vertical"
+                        android:layout_marginStart="18dp"
+                        android:layout_marginTop="16dp"
+                        android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="16dp"
+                        android:gravity="right"
+                        android:text="text"
+                        android:textColor="@color/text_color" />
+                </LinearLayout>
+
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
@@ -210,8 +221,8 @@
 
                     <ImageView
                         android:id="@+id/imageView10"
-                        android:layout_width="200dp"
-                        android:layout_height="200dp"
+                        android:layout_width="250dp"
+                        android:layout_height="300dp"
                         android:layout_gravity="center_horizontal"
                         android:layout_marginStart="16dp"
                         android:layout_marginEnd="16dp"
