--- a/app/src/main/res/layout/activity_parkin_extended.xml
+++ b/app/src/main/res/layout/activity_parkin_extended.xml
@@ -47,6 +47,7 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginTop="8dp"
+        android:nestedScrollingEnabled="false"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -194,6 +195,7 @@
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/cardViewPhoto"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginStart="26dp"
