--- a/app/src/main/res/layout/activity_parkin_extended.xml
+++ b/app/src/main/res/layout/activity_parkin_extended.xml
@@ -65,6 +65,7 @@
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="26dp"
                 android:layout_marginBottom="13dp"
+                android:visibility="gone"
                 app:cardBackgroundColor="@color/button_color"
                 app:cardCornerRadius="15dp">
 
@@ -128,6 +129,7 @@
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="26dp"
                 android:layout_marginBottom="13dp"
+                android:visibility="gone"
                 app:cardBackgroundColor="@color/button_color"
                 app:cardCornerRadius="15dp">
 
@@ -241,6 +243,7 @@
                 android:layout_marginTop="13dp"
                 android:layout_marginEnd="26dp"
                 android:layout_marginBottom="13dp"
+                android:visibility="gone"
                 app:cardBackgroundColor="@color/button_color"
                 app:cardCornerRadius="15dp">
 
