--- a/app/src/main/res/layout/activity_parkin_history.xml
+++ b/app/src/main/res/layout/activity_parkin_history.xml
@@ -31,7 +31,7 @@
             app:srcCompat="@drawable/img_backarrow" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/textViewSettingsBack"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
