--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,4 +12,5 @@
     <color name="text_color">#FF000000</color>
     <color name="button_color">#FFFFFFFF</color>
     <color name="card_color">#FFFFFFFF</color>
+    <color name="plot_color">#FF000000</color>
 </resources>
