--- a/app/src/main/res/layout/activity_parkin_extended.xml
+++ b/app/src/main/res/layout/activity_parkin_extended.xml
@@ -336,4 +336,14 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/backConstrLayout" />
 
+    <ImageView
+        android:id="@+id/imageView6"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
+        android:layout_marginEnd="32dp"
+        app:layout_constraintBottom_toBottomOf="@+id/backConstrLayout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/backConstrLayout"
+        app:srcCompat="@drawable/img_delete" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
